# audio_tag_plugin

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/audio_tag_plugin_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: audio_tag_plugin.podspec
ios/Classes/: audio_tag_plugin.c  audio_tag_plugin.cpp
lib/: audio_tag_plugin.dart  audio_tag_plugin_bindings_generated.dart
src/: CMakeLists.txt  audio_tag_plugin.c  audio_tag_plugin.cpp  audio_tag_plugin.h  my_class.cpp  my_class.h
